# digit-bot

./: README.md  pyproject.toml
digit_bot/: bot.py  message_texts.py
